# guifast

./: .gitignore  build.gradle
dep/guifast/: .gitignore
dep/guifast/backend/: .gitignore  Cargo.toml
dep/guifast/backend/src/: lib.rs  try_init.rs
dep/guifast/backend/src/func/: action_construct.rs  construct.rs  mod.rs  parse.rs  post_construct.rs
dep/guifast/frontend/: package.json
dep/guifast/frontend/src/: index.html  index_js.tsx  main.ts  renderer.tsx
dep/guifast/frontend/src/client/: get_window_id.ts  index.ts  root_store.ts
dep/guifast/frontend/src/command_window/: command_window_reducer.ts  command_window_state.ts  index.ts
dep/guifast/frontend/src/main/: action_info.ts  action_mapper.ts  ext_action_mapper.ts  guifast_main_state.ts  index.ts  libflo_client.ts  map_number_or_string.ts  module_mapper.ts  root_main_reducer.ts  root_main_state.ts  (+3 more)
dep/guifast_shared/backend/: Cargo.toml
dep/guifast_shared/backend/src/: config.rs  error.rs  file_funcs.rs  lib.rs  send_to_guifast.rs  send_to_libflo.rs  send_to_shared_store.rs  send_to_store.rs  string.rs
dep/guifast_shared/backend/src/action/: backend_initialized.rs  command.rs  forward_action.rs  libflo_initialized.rs  mod.rs
dep/guifast_shared/backend/src/serialization/: action_location.rs  basic_action_serde.rs  component_info_serde.rs  file_module_serde.rs  guifast_config_serde.rs  mod.rs  module_serde.rs  modules_serde.rs  require_info_serde.rs  top_menu_serde.rs
dep/guifast_shared/frontend/: .gitignore  package.json  tsconfig.json
dep/guifast_shared/frontend/src/: index.ts  string.ts
(+169 files in other folders)
