[dependencies]
lazy_static = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.error-chain]
version = "0.10"
default-features = false

[dependencies.libflo_action_std]
path = "..\\..\\..\\..\\libflo\\dep\\libflo_action_std"
version = "0.1"

[dependencies.libflo_std]
path = "..\\..\\..\\..\\libflo\\dep\\libflo_std"
version = "0.1"

[package]
authors = ["Tyler Wolf Leonhardt <tyler.wolf.leonhardt@gmail.com>"]
description = "Shared types for guifast."
exclude = [
    ".gitignore",
    "README",
    "test/**"
]
license = "MIT"
name = "guifast_shared"
version = "0.1.0"
